<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.cc.a20171214_tablelayout.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_marginLeft="8dip"
                android:padding="5dip"
                android:text="@string/open"
                android:textColor="@color/SlateGray" />

            <TextView
                android:gravity="right"
                android:padding="5dip"
                android:text="@string/C0"
                android:textColor="@color/SlateGray" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginLeft="8dip"
                android:padding="5dip"
                android:text="@string/save"
                android:textColor="@color/SlateGray" />

            <TextView
                android:gravity="right"
                android:padding="5dip"
                android:text="@string/C1"
                android:textColor="@color/SlateGray" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginLeft="8dip"
                android:padding="5dip"
                android:text="@string/saveas"
                android:textColor="@color/SlateGray" />

            <TextView
                android:gravity="right"
                android:padding="5dip"
                android:text="@string/C2"
                android:textColor="@color/SlateGray" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/SlateGray" />

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/XImport"
                android:textColor="@color/SlateGray" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="5dip"
                android:text="@string/XExport"
                android:textColor="@color/SlateGray" />

            <TextView
                android:gravity="right"
                android:padding="5dip"
                android:text="@string/C3"
                android:textColor="@color/SlateGray" />
        </TableRow>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/SlateGray" />

        <TableRow>
            <TextView
                android:layout_marginLeft="8dip"
                android:padding="5dip"
                android:text="@string/Quit"
                android:textColor="@color/SlateGray"/>
        </TableRow>


    </TableLayout>

</LinearLayout>